fixed overflow on projects section

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ html {
   /* includes borders and padding in width and height sizes */
   font-size: 62.5%;
   box-sizing: border-box;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 
 }
 
